--- a/views/correo.jade
+++ b/views/correo.jade
@@ -91,15 +91,15 @@ html(lang='es')
                 //input( name = 'nombreCompleto' type='hidden' placeholder='De' readonly value = 'De: ' + usuario.nombreCompleto + ' <' + usuario.mail + '@dominosgda.com' +'>' )                br
                 br
                 br
-                input( type='text' placeholder = 'Para' readonly value = 'Para: ' + mail + '@dominosgda.com' ) 
+                input( type='text' placeholder = 'Para' readonly value = 'Para: ' + mail + '@dominosgda.com') 
                 input( type='hidden' placeholder = 'Para' readonly value =  mail   name = 'correoDestino') 
                 br
                 br        
-                input(type='text' placeholder='Asunto'  name = 'asunto' required)
+                input(type='text' placeholder='Asunto'  name = 'asunto')
                 br
                 br              
                 p
-                    textarea(class='mensaje' name='mensaje' placeholder='Mensaje...' required)
+                    textarea(class='mensaje' name='mensaje' placeholder='Mensaje...')
                 br
                 input(type="submit", value="Enviar" class ="brnGuardar")
             br
