--- a/views/Contactos/listas/listaContactos.jade
+++ b/views/Contactos/listas/listaContactos.jade
@@ -106,7 +106,7 @@ html(lang='es')
           if tipo == 5
             option(class="opt" value = 5 selected=true) Telefono Celular 
           else 
-            option(class="opt" value = 5) elefono Cellular
+            option(class="opt" value = 5) Telefono Celular
 
 
 
@@ -155,6 +155,6 @@ html(lang='es')
               form.col-12(action="verUnContacto"  method='POST')
                 input(type='hidden' value= c.IdContacto   name="IdContacto")
                 input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
-                button(type="submit" class="btnVerUnidad" ) Ver Contacto  
+                button(type="submit" class="btnVerUnidad" ) Ver contacto  
 
 
