--- a/views/Contactos/listas/listaPuestos.jade
+++ b/views/Contactos/listas/listaPuestos.jade
@@ -107,5 +107,5 @@ html(lang='es')
               form.col-12(action="verUnPuesto"  method='POST')
                 input(type='hidden' value= p.IdPuesto   name="IdPuesto")
                 input(type='hidden' value= usuario.IdUsuario   name="IdUsuario")
-                button(type="submit" class="btnVerUnidad" ) Ver Oficina
+                button(type="submit" class="btnVerUnidad" ) Ver puesto
 
