--- a/views/Contactos/unosolo/verUnPuesto.jade
+++ b/views/Contactos/unosolo/verUnPuesto.jade
@@ -85,7 +85,7 @@ html(lang='es')
         .col-half
           h4 Nombre Puesto
             .input-group.input-group-icon
-              input(type="text", name = "nombrePuesto", value = puesto.nombrePuesto , placeholder="Nombre Puesto")
+              input(type="text", name = "nombrePuesto", value = puesto.nombrePuesto , placeholder="Nombre Puesto", required)
               .input-icon
                 i.fa.fa-user
         .col-half
