--- a/views/Contactos/unosolo/verUnaOficina.jade
+++ b/views/Contactos/unosolo/verUnaOficina.jade
@@ -85,7 +85,7 @@ html(lang='es')
         .col-half
           h4 Nombre Oficina
             .input-group.input-group-icon
-              input(type="text", name = "nombreOficina", value = oficina.nombreOficina , placeholder="Nombre Oficina")
+              input(type="text", name = "nombreOficina", value = oficina.nombreOficina , placeholder="Nombre Oficina", required)
               .input-icon
                 i.fa.fa-user
         .col-half
