--- a/views/administracion/unosolo/verUnTipoUnidad.jade
+++ b/views/administracion/unosolo/verUnTipoUnidad.jade
@@ -88,7 +88,7 @@ html(lang='es')
       .col-half
         h4 Nombre
           .input-group.input-group-icon
-            input(type="text", name="nombreTipo", value = tipoUnidad.nombreTipo , placeholder="Nombre Tipo Unidad")
+            input(type="text", name="nombreTipo", value = tipoUnidad.nombreTipo , placeholder="Nombre Tipo Unidad", required)
             .input-icon
               i.fa.fa-user
         
