--- a/views/administracion/unosolo/verUnaEmpresa.jade
+++ b/views/administracion/unosolo/verUnaEmpresa.jade
@@ -89,7 +89,7 @@ html(lang='es')
       .col-half
         h4 Nombre Empresa
           .input-group.input-group-icon
-            input(type="text" , name='nombreEmpresa', value = empresa.nombreEmpresa , placeholder="Nombre Empresa")
+            input(type="text" , name='nombreEmpresa', value = empresa.nombreEmpresa , placeholder="Nombre Empresa",required)
             .input-icon
               i.fa.fa-user
         h4 Calle
