--- a/views/administracion/unosolo/verUnaFranquicia.jade
+++ b/views/administracion/unosolo/verUnaFranquicia.jade
@@ -85,7 +85,7 @@ html(lang='es')
         .col-half
           h4 Nombre Franquicia
             .input-group.input-group-icon
-              input(type="text", name = "nombreFranquicia", value = franquicia.nombreFranquicia , placeholder="Nombre franquicia")
+              input(type="text", name = "nombreFranquicia", value = franquicia.nombreFranquicia , placeholder="Nombre franquicia",required)
               .input-icon
                 i.fa.fa-user
         .col-half
