--- a/public/stylesheets/genericoListas.css
+++ b/public/stylesheets/genericoListas.css
@@ -485,20 +485,22 @@ table{
 
 
 .lblBuscarPor {
-	background-color: #f5f5f5;
+	background-color: transparent;
+	
 	border: none;
 	color: rgb(0, 0, 0);
-	background-color: #f5f5f5;
 	border: none;
-	color: rgb(0, 0, 0);
+	
 	padding: 7px 26px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
-	font-size: 16px;
-	border-radius: 5px;
-	width: 150px;
+	font-size: 20px;
+	/*border-radius: 5px;*/
+	width: 175px;
+	margin-top: 5;
 	margin-left: 8px;
+	height: 35px;
 }
 
 .lblResultados{
